--- a/output/static/footer.html
+++ b/output/static/footer.html
@@ -1,4 +1,4 @@
-{{define "footer"}}
+{{- define "footer"}}
     </div><!-- end .main -->
         <footer>
             <p>
@@ -8,4 +8,4 @@
         </footer>
     </body>
 </html>
-{{end}}
+{{- end -}}
