--- a/output/static/group.html
+++ b/output/static/group.html
@@ -1,9 +1,7 @@
-{{define "group"}}
+{{- define "group" -}}
     {{template "header" .}}
-
     {{range .Group}}
         {{template "api" .}}
     {{end}}
-
     {{template "footer" .}}
-{{end}}
+{{- end -}}
