--- a/output/static/header.html
+++ b/output/static/header.html
@@ -22,19 +22,21 @@
     </head>
     <body>
         <header>
-            <h1>
-                <a href="./index.html">{{.Title}}</a>
-                {{- if .Version}}<span class="version">{{.Version}}</span>{{end}}
-            </h1>
+            <div class="left">
+                <h1>
+                    <a href="./index.html">{{.Title}}</a>
+                    {{- if .Version}}<span class="version">{{.Version}}</span>{{end}}
+                </h1>
 
-            <select id="groups">
-                {{- $currGroup := .GroupName -}}
-                {{- range $key, $val := .Groups -}}
-                <option{{if eq $key $currGroup}} selected="selected"{{end}} value="{{$key|groupURL}}">{{$key}}</option>
-                {{end}}
-            </select>
+                <select id="groups">
+                    {{- $currGroup := .GroupName -}}
+                    {{- range $key, $val := .Groups -}}
+                    <option{{if eq $key $currGroup}} selected="selected"{{end}} value="{{$key|groupURL}}">{{$key}}</option>
+                    {{end}}
+                </select>
+            </div>
 
-            <div class="fr filter">
+            <div class="filter">
                 <label><input type="checkbox" checked="checked" value="get">GET</label>
                 <label><input type="checkbox" checked="checked" value="post">POST</label>
                 <label><input type="checkbox" checked="checked" value="put">PUT</label>
