添加新的参数信息

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                             <tr><td>-v</td><td>显示版本信息</td></tr>
                             <tr><td>-l</td><td>列出当前支持的语言</td></tr>
                             <tr><td>-g</td><td>在当前目录下创建配置文件模板</td></tr>
+                            <tr><td>-pprof</td><td>指定个性能测试项，目前支持 cpu 和 mem 两个选项</td></tr>
                         </tbody>
                     </table>
                 </section>
