--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:site_name" content="APIDOC"/>
         <meta itemprop="name" content="APIDOC" />
 
-        <meta name="keywords" itemprop="keywords" content="apidoc,API,doc,RESTful API,C/CPP,Go,Java,Javascript,Perl,PHP,Python,Ruby,Rust,文档生成" />
+        <meta name="keywords" itemprop="keywords" content="apidoc,API,doc,RESTful API,C#,C/C++,Go,Java,Javascript,Perl,PHP,Python,Ruby,Rust,Swift,文档生成" />
         <meta name="description"
               property="og:description"
               itemprop="description"
@@ -50,7 +50,8 @@
             <!-- about -->
             <article class="ui stacked segment" id="about">
                 <h2 class="ui header">关于</h2>
-                <p>apidoc 是一个简单的 <abbr title="Representational State Transfer">RESTful</abbr> <abbr title="Application Programming Interface">API</abbr> 文档生成工具，它从代码注释中提取特定格式的内容，生成文档。目前已支持以下语言：C/C++、Go、Java、Javascript、Perl、PHP、Python、Rust、Ruby 和 Swift。</p>
+                <p>apidoc 是一个简单的 <abbr title="Representational State Transfer">RESTful</abbr> <abbr title="Application Programming Interface">API</abbr> 文档生成工具，它从代码注释中提取特定格式的内容，生成文档。目前已支持以下语言：C#、C/C++、Go、Java、Javascript、Perl、PHP、Python、Rust、Ruby 和 Swift。</p>
+                <p>注：不支持嵌套注释</p>
                 <p>以下是一段简短的 Go 代码下的示例：</p>
                 <pre data-indent="4">
                 /**
