--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
                 <section>
                     <h3>示例</h3>
-                    <p>这里是一段简单的示例代码 <a href="./example">./example</a></p>
+                    <p>这里是一段简单的示例代码 <a href="./example/doc/index.html">./example</a></p>
                 </section>
 
                 <section>
