为标题的锚点添加goto-top的动画过程

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <header>
             <div class="ui container">
                 <h1 class="ui text menu left floated">
-                    <a class="item" href="#">APIDOC<sub class="version">2.14</sub></a>
+                    <a class="item goto-top" href="#">APIDOC<sub class="version">2.14</sub></a>
                 </h1>
                 <nav class="ui text menu right floated">
                     <a class="item" href="#about">关于</a>
@@ -597,6 +597,6 @@
             </div>
             <div class="clearfix"></div>
         </footer>
-        <a id="top" href="#"><i class="big thin angle double up icon"></i></a>
+        <a class="goto-top" id="top" href="#"><i class="big thin angle double up icon"></i></a>
     </body>
 </html>
