--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans" itemscope itemtype="https://schema.org/Article" xmlns:og="http://ogp.me/ns#">
-    <head itemscope itemtype="http://schema.org/WebSite">
+    <head itemscope itemtype="https://schema.org/WebSite">
         <meta charset='utf-8' itemprop="encoding" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -14,7 +14,7 @@
         <meta name="description"
               property="og:description"
               itemprop="description"
-              content="apidoc:RESTful API 文档生成工具" />
+              content="apidoc:RESTful API 文档生成工具的使用说明" />
 
         <meta property="og:type" content="article" />
         <meta property="og:locale" content="zh-cmn-Hans" />
@@ -307,9 +307,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>content</td>
-                                <td>true</td>
-                                <td>多行字符串，一直到文档结尾</td>
+                                <td>content</td><td>true</td><td>多行字符串，一直到文档结尾</td>
                             </tr>
                         </tbody>
                     </table>
@@ -368,9 +366,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>name</td>
-                                <td>true</td>
-                                <td>分组名称，区分大小写。</td>
+                                <td>name</td><td>true</td><td>分组名称，区分大小写。</td>
                             </tr>
                         </tbody>
                     </table>
@@ -418,21 +414,15 @@
                     <table class="ui very compact table">
                         <thead>
                             <tr>
-                                <th>参数</th>
-                                <th>必填</th>
-                                <th>描述</th>
+                                <th>参数</th><th>必填</th><th>描述</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>key</td>
-                                <td>true</td>
-                                <td>报头名称</td>
+                                <td>key</td><td>true</td><td>报头名称</td>
                             </tr>
                             <tr>
-                                <td>summary</td>
-                                <td>true</td>
-                                <td>到行尾，对此报头的描述。</td>
+                                <td>summary</td><td>true</td><td>到行尾，对此报头的描述。</td>
                             </tr>
                         </tbody>
                     </table>
@@ -549,14 +539,10 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>status</td>
-                                <td>true</td>
-                                <td>返回的状态码</td>
+                                <td>status</td><td>true</td><td>返回的状态码</td>
                             </tr>
                             <tr>
-                                <td>summary</td>
-                                <td>true</td>
-                                <td>一个简短的描述信息。</td>
+                                <td>summary</td><td>true</td><td>一个简短的描述信息。</td>
                             </tr>
                         </tbody>
                     </table>
