--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <i class="icon github"></i>Github
                     </a>
                 </nav>
-                <div style="clear:both"></div>
+                <div class="clearfix"></div>
             </div>
         </header>
 
