--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                     <p>@apiSuccess 描述了成功响应时包含的内容，其本身可包含
                         <a href="#apiheader">@apiHeader</a>、
                         <a href="#apiexample">@apiExample</a> 和
-                        <a href="#apiparam">@apiParam</a> 三个子标签。父标签：<a href="@api">@api</a>。</p>
+                        <a href="#apiparam">@apiParam</a> 三个子标签。父标签：<a href="#api">@api</a>。</p>
                     <p>语法：<code>@apiSuccess status summary</code></p>
                     <table class="ui very compact table">
                         <thead>
