更正链接地址

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <meta property="og:type" content="article" />
         <meta property="og:locale" content="zh-cmn-Hans" />
-        <meta property="og:url" content="https://apidoc.tools" />
-        <link itemprop="url" rel="canonical" href="https://apidoc.tools" />
+        <meta property="og:url" content="http://apidoc.tools" />
+        <link itemprop="url" rel="canonical" href="http://apidoc.tools" />
 
         <link rel="stylesheet" href="https://cdn.bootcss.com/semantic-ui/2.2.1/semantic.min.css" />
         <link rel="stylesheet" href="./style.css" />
