--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>name</td><td>true</td><td>分组名称，区分大小写。</td>
+                                <td>name</td><td>true</td><td>分组名称，相同名称不同大小写，将会被分配到同一个分组，但名称上依旧区分大小写。</td>
                             </tr>
                         </tbody>
                     </table>
