--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <meta property="og:site_name" content="APIDOC"/>
         <meta itemprop="name" content="APIDOC" />
 
-        <meta name="keywords" itemprop="keywords" content="apidoc,API,doc,RESTful API,C#,C/C++,Go,Java,Javascript,Perl,PHP,Python,Ruby,Rust,Swift,文档生成" />
+        <meta name="keywords" itemprop="keywords" content="apidoc,API,doc,RESTful API,HTML,C#,C/C++,Go,Java,Javascript,Perl,PHP,Python,Ruby,Rust,Swift,文档生成" />
         <meta name="description"
               property="og:description"
               itemprop="description"
-              content="apidoc:RESTful API 文档生成工具的使用说明" />
+              content="apidoc:RESTful API 文档生成工具的使用说明。支持大部分语言，可生成精美的 HTML 文档或是 JSON 数据格式。" />
 
         <meta property="og:type" content="article" />
         <meta property="og:locale" content="zh-cmn-Hans" />
