--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                 <h2 class="ui header">关于</h2>
                 <p>apidoc 是一个简单的 <abbr title="Representational State Transfer">RESTful</abbr> <abbr title="Application Programming Interface">API</abbr> 文档生成工具，它从代码注释中提取特定格式的内容，生成文档。目前已支持以下语言：C#、C/C++、Go、Java、Javascript、Perl、PHP、Python、Rust、Ruby 和 Swift。</p>
                 <p>注：不支持嵌套注释</p>
+                <p>apidoc 拥有以下特点：</p>
+                <ol>
+                    <li>跨平台，linux、windows、macOS 等都支持；</li>
+                    <li>支持语言广泛，即使是不支持，也很方便扩展；</li>
+                    <li>输出模板可自定义；</li>
+                    <li>支持多个不同语言的多个项目生成一份文档；</li>
+                </ol>
+                
                 <p>以下是一段简短的 Go 代码下的示例：</p>
                 <pre data-indent="4">
                 /**
