--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:site_name" content="APIDOC"/>
         <meta itemprop="name" content="APIDOC" />
 
-        <meta name="keywords" itemprop="keywords" content="apidoc,API,doc,RESTful API,HTML,C#,C/C++,D,Go,Groovy,Java,Javascript,Pascal,Delphi,Perl,PHP,Python,Ruby,Rust,Scala,Swift,文档生成" />
+        <meta name="keywords" itemprop="keywords" content="apidoc,API,doc,REST,RESTful API,HTML,C#,C/C++,D,Go,Groovy,Java,Javascript,Pascal,Delphi,Perl,PHP,Python,Ruby,Rust,Scala,Swift,文档生成" />
         <meta name="description"
               property="og:description"
               itemprop="description"
@@ -136,7 +136,7 @@
                             <!-- input -->
                             <tr class="warning">
                                 <td>inputs</td>
-                                <td>[]</td>
+                                <td>array</td>
                                 <td>指定输入的数据</td>
                             </tr>
                             <tr>
@@ -158,7 +158,7 @@
                             <!-- output -->
                             <tr class="warning">
                                 <td>output</td>
-                                <td>{}</td>
+                                <td>object</td>
                                 <td>控制输出行为</td>
                             </tr>
                             <tr>
