--- a/output/static/index.html
+++ b/output/static/index.html
@@ -40,7 +40,7 @@
             </div>
         </header>
 
-        <main class="main"></main>
+        <main></main>
 
         <footer>
             <p>
