--- a/output/static/index.html
+++ b/output/static/index.html
@@ -18,17 +18,19 @@
 
         <script id="page" type="text/x-handlebars-template">
             <aside>
-                <header><p>{{title}}</p></header>
+                <header><h1>{{title}}</h1></header>
 
-                <ul class="menu">
-                    <li class="menu-item content" data-path="content">home</li>
-                    {{#each groups}}
-                    <li class="menu-item api" data-path="{{this}}">{{@key}}</li>
-                    {{/each}}
-                </ul>
+                <menu>
+                    <ul class="menu">
+                        <li class="menu-item content" data-path="content">home</li>
+                        {{#each groups}}
+                        <li class="menu-item api" data-path="{{this}}">{{@key}}</li>
+                        {{/each}}
+                    </ul>
+                </menu>
 
                 <footer>
-                    <p>内容由 <a href="{{appURL}}">{{appName}}</a> 编译于 <time>{{date}}</time>，用时{{elapsed}}。</p>
+                    <p>内容由<a href="{{appURL}}">{{appName}}</a>编译于 <time>{{dateFormat date}}</time>，用时{{elapsedFormat elapsed}}。</p>
 
                     {{#if licenseName}}
                     <p>内容采用<a href="{{licenseURL}}">{{licenseName}}</a>进行许可。</p>
